# course_project_1

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
container/: CMakeLists.txt
container/include/: ShapeList.hpp
draw/include/: DrawAdapterGTK.hpp
draw_gtk/: CMakeLists.txt
draw_gtk/include/: DrawAdapter.hpp  ShapeDrawArea.hpp  ShapeWindow.hpp
draw_gtk/src/: DrawAdapter.cpp  ShapeDrawArea.cpp  ShapeWindow.cpp
list_test/: CMakeLists.txt
list_test/src/: list_test.cpp
logger/: CMakeLists.txt
logger/include/: Logger.hpp
logger/src/: Logger.cpp
main/: CMakeLists.txt
main/src/: main.cpp
qt/CourseProject1/: CMakeLists.txt  main.cpp  mainwindow.ui
qt/build-CourseProject1-Qt6-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
qt/build-CourseProject1-Qt6-Debug/.cmake/api/v1/reply/: cache-v2-c5bfdcbeb81a096f2ff2.json  cmakeFiles-v1-8c98a7f1659e10016c2e.json  codemodel-v2-4e61898b95e4407de2a6.json  index-2022-04-30T17-22-48-0082.json  target-CourseProject1-Debug-09e579718e0a8cd15de7.json  target-CourseProject1_autogen-Debug-2c9d02711cf870489c74.json  (+1 more)
qt/build-CourseProject1-Qt6-Debug/.qt/: QtDeploySupport.cmake
qt/build-CourseProject1-Qt6-Debug/.qtc_clangd/: compile_commands.json
qt/build-CourseProject1-Qt6-Debug/config.tests/static_link_order/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
shapes/: CMakeLists.txt
shapes/include/: ComplexShape.hpp  Rectange.hpp  Rhombus.hpp  Shape.hpp  Vec.hpp
utils/include/: Singleton.hpp
